--- a/paper.tex
+++ b/paper.tex
@@ -105,37 +105,37 @@
 \usepackage{framed}
 \definecolor{shadecolor}{RGB}{248,248,248}
 \newenvironment{Shaded}{\begin{snugshade}}{\end{snugshade}}
-\newcommand{\KeywordTok}[1]{\textcolor[rgb]{0.13,0.29,0.53}{\textbf{#1}}}
+\newcommand{\AlertTok}[1]{\textcolor[rgb]{0.94,0.16,0.16}{#1}}
+\newcommand{\AnnotationTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
+\newcommand{\AttributeTok}[1]{\textcolor[rgb]{0.77,0.63,0.00}{#1}}
+\newcommand{\BaseNTok}[1]{\textcolor[rgb]{0.00,0.00,0.81}{#1}}
+\newcommand{\BuiltInTok}[1]{#1}
+\newcommand{\CharTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
+\newcommand{\CommentTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textit{#1}}}
+\newcommand{\CommentVarTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
+\newcommand{\ConstantTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
+\newcommand{\ControlFlowTok}[1]{\textcolor[rgb]{0.13,0.29,0.53}{\textbf{#1}}}
 \newcommand{\DataTypeTok}[1]{\textcolor[rgb]{0.13,0.29,0.53}{#1}}
 \newcommand{\DecValTok}[1]{\textcolor[rgb]{0.00,0.00,0.81}{#1}}
-\newcommand{\BaseNTok}[1]{\textcolor[rgb]{0.00,0.00,0.81}{#1}}
-\newcommand{\FloatTok}[1]{\textcolor[rgb]{0.00,0.00,0.81}{#1}}
-\newcommand{\ConstantTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
-\newcommand{\CharTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
-\newcommand{\SpecialCharTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
-\newcommand{\StringTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
-\newcommand{\VerbatimStringTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
-\newcommand{\SpecialStringTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
-\newcommand{\ImportTok}[1]{#1}
-\newcommand{\CommentTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textit{#1}}}
 \newcommand{\DocumentationTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
-\newcommand{\AnnotationTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
-\newcommand{\CommentVarTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
-\newcommand{\OtherTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{#1}}
-\newcommand{\FunctionTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
-\newcommand{\VariableTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
-\newcommand{\ControlFlowTok}[1]{\textcolor[rgb]{0.13,0.29,0.53}{\textbf{#1}}}
-\newcommand{\OperatorTok}[1]{\textcolor[rgb]{0.81,0.36,0.00}{\textbf{#1}}}
-\newcommand{\BuiltInTok}[1]{#1}
-\newcommand{\ExtensionTok}[1]{#1}
-\newcommand{\PreprocessorTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textit{#1}}}
-\newcommand{\AttributeTok}[1]{\textcolor[rgb]{0.77,0.63,0.00}{#1}}
-\newcommand{\RegionMarkerTok}[1]{#1}
-\newcommand{\InformationTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
-\newcommand{\WarningTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
-\newcommand{\AlertTok}[1]{\textcolor[rgb]{0.94,0.16,0.16}{#1}}
 \newcommand{\ErrorTok}[1]{\textcolor[rgb]{0.64,0.00,0.00}{\textbf{#1}}}
+\newcommand{\ExtensionTok}[1]{#1}
+\newcommand{\FloatTok}[1]{\textcolor[rgb]{0.00,0.00,0.81}{#1}}
+\newcommand{\FunctionTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
+\newcommand{\ImportTok}[1]{#1}
+\newcommand{\InformationTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
+\newcommand{\KeywordTok}[1]{\textcolor[rgb]{0.13,0.29,0.53}{\textbf{#1}}}
 \newcommand{\NormalTok}[1]{#1}
+\newcommand{\OperatorTok}[1]{\textcolor[rgb]{0.81,0.36,0.00}{\textbf{#1}}}
+\newcommand{\OtherTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{#1}}
+\newcommand{\PreprocessorTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textit{#1}}}
+\newcommand{\RegionMarkerTok}[1]{#1}
+\newcommand{\SpecialCharTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
+\newcommand{\SpecialStringTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
+\newcommand{\StringTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
+\newcommand{\VariableTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
+\newcommand{\VerbatimStringTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
+\newcommand{\WarningTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
 
 
 
@@ -200,7 +200,8 @@ Bioconductor/R package called plyranges.
 \linenumbers
 
 % Use "Eq" instead of "Equation" for equation citations.
-\section{Introduction}\label{introduction}
+\hypertarget{introduction}{%
+\section{Introduction}\label{introduction}}
 
 High-throughput genomics promises to unlock new disease therapies, and
 strengthen our knowledge of basic biology. To deliver on those promises,
@@ -246,7 +247,7 @@ representing genomic data and enable interoperability by allowing users
 and developers to use these abstractions in their own code and packages.
 Other genomic DSLs that are embedded in programming languages include
 pybedtools and valr {[}8,9{]}, however these packages lack the
-interoperability provided by in the aforementioned Bioconductor packages
+interoperability provided by the aforementioned Bioconductor packages
 and are not easily extended.
 
 The Bioconductor infrastructure models the genomic data and operations
@@ -278,9 +279,23 @@ language on top of a key subset of Bioconductor data structures and thus
 fully integrates with the Bioconductor framework, gaining access to its
 scalable data representations and sophisticated statistical methods.
 
-\section{Genomic relational algebra}\label{genomic-relational-algebra}
+\hypertarget{genomic-relational-algebra}{%
+\section{Genomic relational algebra}\label{genomic-relational-algebra}}
 
-\subsection{Data model}\label{data-model}
+\hypertarget{data-model}{%
+\subsection{Data model}\label{data-model}}
+
+\begin{figure}
+{\centering \includegraphics[width=400pt]{diagrams/diagrams-001}}
+\caption{An illustration of the GRanges data model for a
+sample from an RNA-seq experiment. The core components of the data model
+inlcude a seqnames column (representing the chromosome), a ranges column
+which consists of start and end coordinates for a genomic region, and a
+strand identifier (either positive, negative, or unstranded). Metadata
+are included as columns to the right of the dotted line as annotations
+(gene\_id) or range level covariates (GC score and count).}
+\label{fig:GRanges} 
+\end{figure}
 
 The \texttt{plyranges} DSL is built on the core Bioconductor data
 structure GRanges, which is capable of representing all types of genomic
@@ -288,9 +303,55 @@ data at a semantic level that roughly matches the intuition of most
 users. A GRanges is essentially a table, with columns for the
 chromosome, start and end coordinates, and the strand, along with an
 arbitrary set of additional columns, consisting of measurements or
-metadata specific to the data type or experiment. For example, a GRanges
-can represent a gene with its chromosomal coordinates, exonic structure,
-and a count column summarized from an RNA-seq experiment.
+metadata specific to the data type or experiment (figure
+\ref{fig:GRanges}).
+
+\begin{table}[!htbp]
+\centering
+\begin{tabular}{|l|l|p{4cm}|}
+  \hline
+  & Verb &  Description \\ 
+  \hline
+   & \textbf{\emph{summarise()}} & aggregate over column(s) \\ 
+   Aggregation & \emph{disjoin\_ranges()} & aggregate column(s) over the union of end coordinates \\
+   &  \emph{reduce\_ranges()} & aggregate column(s) by merging overlapping and neighbouring ranges \\
+   \hline
+   &  \textbf{\emph{mutate()}} & modifies any column \\
+   & \textbf{\emph{select()}} & select columns \\
+  Arithmetic (Unary) & \textbf{\emph{arrange()}} & sort by columns \\
+   & \emph{stretch()} & extend range by fixed amount \\
+   &  \emph{shift\_(direction)} & shift coordinates \\
+   & \emph{flank\_(direction)} & generate flanking regions \\
+   & \emph{\%intersection\% } & row-wise intersection \\
+   & \emph{\%union\%} & row-wise union \\
+   & \emph{compute\_coverage} & coverage over all ranges \\
+  Arithmetic (Binary) &  \emph{\%setdiff\%} & row-wise set difference \\
+   & \emph{between()} & row-wise gap range \\
+   & \emph{span()} & row-wise spanning range \\
+   \hline
+    & \emph{join\_overlap\_*()} & merge by overlapping ranges \\
+    & \emph{join\_nearest} & merge by nearest neighbour ranges \\
+    & \emph{join\_follow} & merge by following ranges \\
+    Merging & \emph{join\_precedes} & merge by preceding ranges \\
+    & \emph{union\_ranges} & range-wise union \\
+    & \emph{intersect\_ranges} & range-wise intersect \\
+    & \emph{setdiff\_ranges} & range-wise set difference \\
+    & \emph{complement\_ranges} & range-wise union \\
+  \hline
+   & \textbf{\emph{anchor\_direction()}} & fix coordinates at direction \\
+  Modifier & \textbf{\emph{group\_by()}} & partition by column(s)  \\ 
+   & \emph{group\_by\_overlaps()} & partition by overlaps \\
+   \hline
+   & \textbf{\emph{filter()}} & subset rows \\
+  Restriction & \emph{filter\_by\_overlaps()} & subset by overlap \\
+    & \emph{filter\_by\_non\_overlaps()} & subset by no overlap \\
+   \hline
+\end{tabular}
+\caption{Overview of the \texttt{plyranges} grammar. The core verbs are
+briefly described and categorised into one of: aggregation, unary or binary
+arithmetic, merging, modifier, or restriction. A verb is given bold text if
+its origin is from the \texttt{dplyr} grammar.}\label{tab:grammar}
+\end{table}
 
 By definition GRanges follows the tidy data pattern: it is a rectangular
 table corresponding to a single biological context. Each row contains a
@@ -302,59 +363,29 @@ discussed below in the context of the GRanges class and an overview of
 the grammar is provided in table \ref{tab:grammar}. Where applicable we
 contrast our design to the existing Bioconductor infrastructure.
 
-\begin{table}[ht]
-\label{tab:grammar}
-\centering
-\begin{tabular}{|l|l|p{4cm}|}
-  \hline
-Operation Type & Verb &  Description \\ 
-  \hline
-  Arithmetic &  `mutate()` & modifies any column \\
-  Arithmetic & `select()` & select columns \\
-  Arithmetic & `arrange()` & sort by columns \\
-  Arithmetic & `set\_width()` & modifies width \\
-  Arithmetic & `stretch()` & extend range by fixed amount \\
-  Arithmetic & `shift\_(direction)` & shift coordinates \\
-  Arithmetic & `flank\_(direction)` & generate flanking regions \\
-  Arithmetic & `\%setop\%` & row-wise set operations \\
-  Restriction & `filter()` & subset rows \\
-  Restriction & `filter\_by\_overlaps()` & subset by overlap \\
-  Restriction & `filter\_by\_non\_overlaps()` & subset by no overlap \\
-  Merging & `join\_overlap\_()` & merge by overlapping ranges \\
-  Merging & `join\_(follow/precedes/nearest)` & merge nearest neighbours \\
-  Merging & `(setop)\_ranges` & range-wise set operations \\
-  Aggregation & `summarise()` & aggregate over column(s) \\ 
-  Aggregation & `disjoin\_ranges()` & aggregate column(s) over the union of end coordinates \\
-  Aggregation & `reduce\_ranges()` & aggregate column(s) by merging overlapping and neighbouring ranges \\
-  Modifier & `group\_by()` & partition by column(s)  \\ 
-  Modifier & `group\_by\_overlaps()` & partition by overlaps \\
-  Modifier & `anchor\_direction()` & fix coordinates \\
-   \hline
-\end{tabular}
-\caption{Overview of `plyranges` grammar.}
-\end{table}
-
-\subsection{Algebraic operations}\label{algebraic-operations}
+\hypertarget{algebraic-operations}{%
+\subsection{Algebraic operations}\label{algebraic-operations}}
 
 The \texttt{plyranges} DSL defines an expressive algebra for performing
 genomic operations with and between GRanges objects (see table
-\ref{tab:grammar}). {[}ML: add a couple overview sentences indicating
-the classes of operations like arithmetic, merging, aggregation{]}
+\ref{tab:grammar}). The grammar includes several classes of operation
+that cover most use cases in genomics data analysis. There are operators
+for performing arithmetic such as modifying width or performing set
+operations, merging such as finding overlaps between GRanges, subsetting
+by genomic regions, and aggregating over columns within in a GRanges
+object.
 
 GRanges describes the within-sequence coordinates of a range by its
 \emph{start}, \emph{end} and \emph{width}. Those three variables are
 mutually dependent and partially redundant, so direct manipulation of
 them is problematic. For example, changing the \emph{width} column needs
 to change either the \emph{start}, \emph{end} or both to preserve
-integrity of the object. We introduce the \emph{anchor} combinator to
+integrity of the object. We introduce the \emph{anchor} modifier to
 disambiguate these adjustments. Supported anchor points include the
 start, end and midpoint, as well as the 3' and 5' ends for
 strand-directed ranges. For example, if we anchor the start, then
 setting the width will adjust the end while leaving the start
 stationary.
-
-{[}ML: where does the word `combinator' come from here? maybe `modifier'
-is better? that's what the table uses{]}
 
 The algebra also defines conveniences for relative coordinate
 adjustments: \emph{shift} (unanchored adjustment to both start and end)
@@ -419,17 +450,23 @@ are not hit by the subject.
 
 \begin{figure}
 
-{\centering \includegraphics[width=400pt]{olaps-figure} 
+{\centering \includegraphics[width=400pt]{diagrams/diagrams-002} 
 
 }
 
-\caption{Illustration of the three overlap join operators. Each join takes query and subject range as input (black and grey rectangles, respectively) with associated metadata (pink and orange rectangles respectively). An index for the join is computed via returning a Hits object, which contains the indices of where the subject overlaps the query range. This index is used to expand the query or (take the intersect) of the query ranges with subject ranges and return metadata associated with each input. This principle is gnerally applied through the `plyranges` DSL for both overlaps and nearest neighbour operations.}\label{fig:olaps-fig}
+\caption{Illustration of the three overlap join operators. Each join takes query and subject range as input (black and light gray rectangles, respectively). An index for the join is computed, returning a Hits object, which contains the indices of where the subject overlaps the query range. This index is used to expand the query ranges by where it was 'hit' by the subject ranges. The join semantics alter what is returned: for an *inner* join the query range is returned for each match, for an intersect *join* the intersection is taken between overlapping ranges, and for a *left* join all query ranges are returned even if the subject range does not overlap them. This principle is gnerally applied through the `plyranges` DSL for both overlaps and nearest neighbour operations.}\label{fig:olaps-fig}
 \end{figure}
 
-{[} add a simple paragraph about how we can filter, sort, group and
-aggregate just like other tabular structures {]}
+Since the GRanges object is a tabular data structure our grammar
+includes operators to filter, sort and aggregate by columns in a
+GRanges. These operations can be performed over partitions within
+GRanges object using the \emph{group\_by} modifier. Together with our
+algebra for arithmetic and merging, these operations enable flexible and
+reproducible analysis using the desgin principles of the \texttt{dplyr}
+grammar.
 
-\subsection{Cohesion}\label{cohesion}
+\hypertarget{cohesion}{%
+\subsection{Cohesion}\label{cohesion}}
 
 A function is cohesive if it performs a singular task and does not
 produce any side-effects. In the \texttt{plyranges} DSL our algebra for
@@ -453,7 +490,8 @@ that perform restriction, aggregation, or column modification still
 perform those singular tasks, however grouping changes how those tasks
 are performed.
 
-\subsection{Consistency}\label{consistency}
+\hypertarget{consistency}{%
+\subsection{Consistency}\label{consistency}}
 
 A core design principle of the \texttt{plyranges} DSL is interface
 consistency: a user should not be surprised by the input or output of
@@ -476,7 +514,8 @@ We have replaced that packages generic functions for importing files
 with a family of reader functions that all take the exact same
 arguments.
 
-\subsection{Endomorphism}\label{endomorphism}
+\hypertarget{endomorphism}{%
+\subsection{Endomorphism}\label{endomorphism}}
 
 Most function calls in \texttt{plyranges} are endomorphisms: when the
 input is GRanges object the output will also be a GRanges object. The
@@ -497,7 +536,8 @@ new user. While, these low-level classes enable efficient computing, the
 increase complexity, and as a consequence are abstracted away in the
 \texttt{plyranges} DSL.
 
-\subsection{Fluency}\label{fluency}
+\hypertarget{fluency}{%
+\subsection{Fluency}\label{fluency}}
 
 As a consequence of the design principles defined above every function
 in \texttt{plyranges} performs a single action on GRanges objects. The
@@ -522,7 +562,8 @@ the R package \texttt{magrittr} {[}13{]}), which can be read as the word
 `then'. Overall, this allows users to write human readable code because
 workflows describe what the code is doing rather than how its doing it.
 
-\subsection{Opportunities}\label{opportunities}
+\hypertarget{opportunities}{%
+\subsection{Opportunities}\label{opportunities}}
 
 A caveat to constructing a compatible interface with \texttt{dplyr} is
 that \texttt{plyranges} makes extensive use of non-standard evaluation
@@ -542,13 +583,17 @@ data for combining multiomic measurements from multiple samples. The
 grammar and design of the \texttt{plryanges} DSL can be naturally
 extended to the SummarizedExperiment.
 
-\section{Results}\label{results}
+\hypertarget{results}{%
+\section{Results}\label{results}}
 
-Here we provide examples on how to use the \texttt{plyranges} DSL to
-construct genomic data workflows and highlight its interoperability with
-existing Bionconductor packages.
+Here we provide illustrative examples by using the \texttt{plyranges}
+DSL to show how our grammar could be integrated into genomic data
+workflows. We also highlight how interoperability with existing
+Bioconductor infrastructure, enables easy access to public datasets and
+methods for analysis and visualisation.
 
-\subsection{Peak Finding}\label{peak-finding}
+\hypertarget{peak-finding}{%
+\subsection{Peak Finding}\label{peak-finding}}
 
 The Bioconductor package \texttt{AnnotationHub} {[}15{]} can be used to
 search for BigWig files from ChIP-Seq experiments from the Human
@@ -605,7 +650,7 @@ maximum position by anchoring and modifying the the width.
 \NormalTok{chr10_max_score_region <-}\StringTok{ }\NormalTok{chr10_scores }\OperatorTok{%>%}
 \StringTok{  }\KeywordTok{filter}\NormalTok{(score }\OperatorTok{==}\StringTok{ }\KeywordTok{max}\NormalTok{(score)) }\OperatorTok{%>%}\StringTok{ }
 \StringTok{  }\KeywordTok{anchor_center}\NormalTok{() }\OperatorTok{%>%}
-\StringTok{  }\KeywordTok{set_width}\NormalTok{(}\DecValTok{5000}\NormalTok{)}
+\StringTok{  }\KeywordTok{mutate}\NormalTok{(}\DataTypeTok{width =} \DecValTok{5000}\NormalTok{)}
 \end{Highlighting}
 \end{Shaded}
 
@@ -629,7 +674,49 @@ contain the max peak on chromosome 10 (figure \ref{fig:peak-viz}).
 \caption{Visualisation of normalised coverage scores accross a 5000nt region of chromosome 10 from H3K27Me3 ChIP-Seq assay from the Human Epigenome Roadmap project.}\label{fig:peak-viz}
 \end{figure}
 
-\subsection{Quality Control Metrics}\label{quality-control-metrics}
+\hypertarget{computing-windowed-statistics}{%
+\subsection{Computing Windowed
+Statistics}\label{computing-windowed-statistics}}
+
+Another common operation in genomics data analysis is to compute data
+summaries over genomic windows. In \texttt{plyranges} this can be
+achieved via the \texttt{group\_by\_overlaps} operator. Continuing with
+the data from the Human Epigenome Roadmap Consortium data, we can count
+the number of reads that fall into a fixed bins of size 10000bp over a
+BAM file of H3K27Me3 methylation marks from the H1 cell line. We extract
+reads that have a mapping quality score greater than 20:
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{alignments <-}\StringTok{ }\KeywordTok{read_bam}\NormalTok{(h1_bam) }\OperatorTok{%>%}
+\StringTok{  }\KeywordTok{filter}\NormalTok{(mapq }\OperatorTok{>}\StringTok{ }\DecValTok{20}\NormalTok{) }
+\end{Highlighting}
+\end{Shaded}
+
+Note that the BAM file is only read into memory once we perform an
+operation on it. Because of interoperability over Bioconductor, we can
+generate genomic bins using the \texttt{tile} function from
+\texttt{GenomicRanges}:
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{bins <-}\StringTok{ }\KeywordTok{tile}\NormalTok{(h1_bam, }\DataTypeTok{width =} \DecValTok{10000}\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
+
+Finally, we can use \texttt{group\_by\_overlaps} with \texttt{summarise}
+to compute the total number of reads within each window.
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{h1_bam_read_summary <-}\StringTok{ }\NormalTok{h1_bam }\OperatorTok{%>%}
+\StringTok{  }\KeywordTok{group_by_overlaps}\NormalTok{(bins) }\OperatorTok{%>%}
+\StringTok{  }\KeywordTok{summarise}\NormalTok{(}\DataTypeTok{n_reads =} \KeywordTok{n}\NormalTok{())}
+\end{Highlighting}
+\end{Shaded}
+
+\hypertarget{quality-control-metrics}{%
+\subsection{Quality Control Metrics}\label{quality-control-metrics}}
 
 We have created a GRanges object from genotyping performed on the H1
 cell line, consisting of approximately two million single nucleotide
@@ -676,50 +763,9 @@ transversion SNPs within each chromosome (figure \ref{fig:titv-viz}).
 \caption{Dot plot of chromosomes ordered by estimated transition-transversion ratio. A white reference line is drawn at the expected ratio for a human exome.}\label{fig:titv-viz}
 \end{figure}
 
-\subsection{Computing Windowed
-Statistics}\label{computing-windowed-statistics}
-
-Another common operation in genomics data analysis is to compute data
-summaries over genomic windows. In \texttt{plyranges} this can be
-achieved via the \texttt{group\_by\_overlaps} operator. Continuing with
-the data from the Human Epigenome Roadmap Consortium data, we can count
-the number of reads that fall into a fixed bins of size 10000bp over a
-BAM file of H3K27Me3 methylation marks from the H1 cell line. We extract
-reads that have a mapping quality score greater than 20:
-
-\begin{Shaded}
-\begin{Highlighting}[]
-\NormalTok{alignments <-}\StringTok{ }\KeywordTok{read_bam}\NormalTok{(h1_bam) }\OperatorTok{%>%}
-\StringTok{  }\KeywordTok{filter}\NormalTok{(mapq }\OperatorTok{>}\StringTok{ }\DecValTok{20}\NormalTok{) }
-\end{Highlighting}
-\end{Shaded}
-
-Note that the BAM file is only read into memory once we perform an
-operation on it. Because of interoperability over Bioconductor, we can
-generate genomic bins using the \texttt{tile} function from
-\texttt{GenomicRanges}:
-
-\begin{Shaded}
-\begin{Highlighting}[]
-\NormalTok{bins <-}\StringTok{ }\KeywordTok{tile}\NormalTok{(h1_bam, }\DataTypeTok{width =} \DecValTok{10000}\NormalTok{)}
-\end{Highlighting}
-\end{Shaded}
-
-Finally, we can use \texttt{group\_by\_overlaps} with \texttt{summarise}
-to compute the total number of reads within each window.
-
-\begin{Shaded}
-\begin{Highlighting}[]
-\NormalTok{h1_bam_read_summary <-}\StringTok{ }\NormalTok{h1_bam }\OperatorTok{%>%}
-\StringTok{  }\KeywordTok{group_by_overlaps}\NormalTok{(bins) }\OperatorTok{%>%}
-\StringTok{  }\KeywordTok{summarise}\NormalTok{(}\DataTypeTok{n_reads =} \KeywordTok{n}\NormalTok{())}
-\end{Highlighting}
-\end{Shaded}
-
-https://support.bioconductor.org/p/71601/ also useful example?
-
+\hypertarget{availablilty-and-future-work}{%
 \section{Availablilty and Future
-Work}\label{availablilty-and-future-work}
+Work}\label{availablilty-and-future-work}}
 
 The \texttt{plyranges} package is available on the Bioconductor project
 website \url{https://bioconductor.org} or can be accessed via Github
@@ -732,7 +778,8 @@ integrates well with the principles of the grammar of graphics, we aim
 to use it to prepare data for the visualisation of multimodal biological
 datasets.
 
-\section{Acknowledgements}\label{acknowledgements}
+\hypertarget{acknowledgements}{%
+\section{Acknowledgements}\label{acknowledgements}}
 
 We would like to thank Dr Matthew Ritchie at the Walter and Eliza Hall
 Institute and Dr Paul Harrison for their feedback on earlier drafts of
@@ -742,99 +789,100 @@ the code review they performed. This report was written with
 {[}18{]}. All code required to reproduce this article is available at
 https://github.com/sa-lee/plyranges-paper.
 
-\section*{References}\label{references}
+\hypertarget{references}{%
+\section*{References}\label{references}}
 \addcontentsline{toc}{section}{References}
 
 \hypertarget{refs}{}
-\hypertarget{ref-Kozanitis2014-va}{}
+\leavevmode\hypertarget{ref-Kozanitis2014-va}{}%
 1. Kozanitis C, Heiberg A, Varghese G, Bafna V. Using genome query
 language to uncover genetic variation. Bioinformatics. 2014;30: 1--8.
 doi:\href{https://doi.org/10.1093/bioinformatics/btt250}{10.1093/bioinformatics/btt250}
 
-\hypertarget{ref-Kozanitis2016-bm}{}
+\leavevmode\hypertarget{ref-Kozanitis2016-bm}{}%
 2. Kozanitis C, Patterson DA. GenAp: A distributed SQL interface for
 genomic data. BMC Bioinformatics. 2016;17: 63.
 doi:\href{https://doi.org/10.1186/s12859-016-0904-1}{10.1186/s12859-016-0904-1}
 
-\hypertarget{ref-Kaitoua2017-pw}{}
+\leavevmode\hypertarget{ref-Kaitoua2017-pw}{}%
 3. Kaitoua A, Pinoli P, Bertoni M, Ceri S. Framework for supporting
 genomic operations. IEEE Trans Comput. 2017;66: 443--457.
 doi:\href{https://doi.org/10.1109/TC.2016.2603980}{10.1109/TC.2016.2603980}
 
-\hypertarget{ref-Quinlan2010-gc}{}
+\leavevmode\hypertarget{ref-Quinlan2010-gc}{}%
 4. Quinlan AR, Hall IM. BEDTools: A flexible suite of utilities for
 comparing genomic features. Bioinformatics. 2010;26: 841--842.
 doi:\href{https://doi.org/10.1093/bioinformatics/btq033}{10.1093/bioinformatics/btq033}
 
-\hypertarget{ref-r-core}{}
+\leavevmode\hypertarget{ref-r-core}{}%
 5. R Core Team. R: A language and environment for statistical computing
 {[}Internet{]}. Vienna, Austria: R Foundation for Statistical Computing;
 2018. Available: \url{https://www.R-project.org/}
 
-\hypertarget{ref-Lawrence2013-wg}{}
+\leavevmode\hypertarget{ref-Lawrence2013-wg}{}%
 6. Lawrence M, Huber W, Pagès H, Aboyoun P, Carlson M, Gentleman R, et
 al. Software for computing and annotating genomic ranges. PLoS Comput
 Biol. 2013;9.
 doi:\href{https://doi.org/10.1371/journal.pcbi.1003118}{10.1371/journal.pcbi.1003118}
 
-\hypertarget{ref-Huber2015-ei}{}
+\leavevmode\hypertarget{ref-Huber2015-ei}{}%
 7. Huber W, Carey VJ, Gentleman R, Anders S, Carlson M, Carvalho BS, et
 al. Orchestrating high-throughput genomic analysis with bioconductor.
 Nat Methods. Springer Nature; 2015;12: 115--121.
 doi:\href{https://doi.org/10.1038/nmeth.3252}{10.1038/nmeth.3252}
 
-\hypertarget{ref-Dale2011-js}{}
+\leavevmode\hypertarget{ref-Dale2011-js}{}%
 8. Dale RK, Pedersen BS, Quinlan AR. Pybedtools: A flexible python
 library for manipulating genomic datasets and annotations.
 Bioinformatics. 2011;27: 3423--3424.
 doi:\href{https://doi.org/10.1093/bioinformatics/btr539}{10.1093/bioinformatics/btr539}
 
-\hypertarget{ref-Kent2017}{}
+\leavevmode\hypertarget{ref-Kent2017}{}%
 9. Riemondy KA, Sheridan RM, Gillen A, Yu Y, Bennett CG, Hesselberth JR.
 Valr: Reproducible genome interval arithmetic in r. F1000Research. 2017;
 doi:\href{https://doi.org/10.12688/f1000research.11997.1}{10.12688/f1000research.11997.1}
 
-\hypertarget{ref-Wickham2014-jc}{}
+\leavevmode\hypertarget{ref-Wickham2014-jc}{}%
 10. Wickham H. Tidy data. Journal of Statistical Software, Articles.
 2014;59: 1--23.
 doi:\href{https://doi.org/10.18637/jss.v059.i10}{10.18637/jss.v059.i10}
 
-\hypertarget{ref-Wickham2017-dplyr}{}
+\leavevmode\hypertarget{ref-Wickham2017-dplyr}{}%
 11. Wickham H, Francois R, Henry L, Müller K. Dplyr: A grammar of data
 manipulation {[}Internet{]}. 2017. Available:
 \url{https://CRAN.R-project.org/package=dplyr}
 
-\hypertarget{ref-Lawrence2009-nt}{}
+\leavevmode\hypertarget{ref-Lawrence2009-nt}{}%
 12. Lawrence M, Gentleman R, Carey V. Rtracklayer: An R package for
 interfacing with genome browsers. Bioinformatics. 2009;25: 1841--1842.
 doi:\href{https://doi.org/10.1093/bioinformatics/btp328}{10.1093/bioinformatics/btp328}
 
-\hypertarget{ref-R-magrittr}{}
+\leavevmode\hypertarget{ref-R-magrittr}{}%
 13. Bache SM, Wickham H. Magrittr: A forward-pipe operator for r
 {[}Internet{]}. 2014. Available:
 \url{https://CRAN.R-project.org/package=magrittr}
 
-\hypertarget{ref-R-rlang}{}
+\leavevmode\hypertarget{ref-R-rlang}{}%
 14. Henry L, Wickham H. Rlang: Functions for base types and core r and
 'tidyverse' features {[}Internet{]}. 2017. Available:
 \url{http://rlang.tidyverse.org}
 
-\hypertarget{ref-R-ahub}{}
+\leavevmode\hypertarget{ref-R-ahub}{}%
 15. Morgan M. AnnotationHub: Client to access annotationhub resources.
 2017.
 
-\hypertarget{ref-Roadmap_Epigenomics_Consortium2015-pr}{}
+\leavevmode\hypertarget{ref-Roadmap_Epigenomics_Consortium2015-pr}{}%
 16. Roadmap Epigenomics Consortium, Kundaje A, Meuleman W, Ernst J,
 Bilenky M, Yen A, et al. Integrative analysis of 111 reference human
 epigenomes. Nature. 2015;518: 317--330.
 doi:\href{https://doi.org/10.1038/nature14248}{10.1038/nature14248}
 
-\hypertarget{ref-R-knitr}{}
+\leavevmode\hypertarget{ref-R-knitr}{}%
 17. Xie Y. Dynamic documents with R and knitr {[}Internet{]}. 2nd ed.
 Boca Raton, Florida: Chapman; Hall/CRC; 2015. Available:
 \url{https://yihui.name/knitr/}
 
-\hypertarget{ref-R-ggbio}{}
+\leavevmode\hypertarget{ref-R-ggbio}{}%
 18. Yin T, Cook D, Lawrence M. Ggbio: An r package for extending the
 grammar of graphics for genomic data. Genome Biology. BioMed Central
 Ltd; 2012;13: R77.
